# pamauthentication

./: CMakeLists.txt  README.md  plugin.cpp  plugin.h
